﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v8.1.0:
~~~~~~~~~

* KGySoft.Drawing.Imaging namespace
===================================
+ BitmapDataFactory class:
  + New CreateBitmapData overloads.
+ ColorF struct:
  + FromRgb(Vector3), FromRgba(Vector4), ToRgba, ToRgb methods: Now they are available also for .NET Framework 4.5
    and .NET Standard 2.0 targets.
+ PColorF struct:
  + FromRgba(Vector4), ToRgba methods: Now they are available also for .NET Framework 4.5 and .NET Standard 2.0
    targets.
+ ColorSpaceHelper class:
  + SrgbToLinearVectorRgba and LinearToSrgbVectorRgba methods: Now they are available also for .NET Framework 4.5
    and .NET Standard 2.0 targets.
* OptimizedPaletteQuantizer class:
  * MedianCut method: Improved memory usage and performance. Supports parallel processing.
* Palette class:
  * GetNearestColor and GetNearestColorIndex methods:
    * Improving performance
    - AlphaThreshold was not considered for partially transparent colors with an exact match in the palette.
    - The result was not always correct if the palette contained partially transparent colors.


~~~~~~~~~
! v8.0.0:
~~~~~~~~~

+ Assembly changes:
===================
+ Targeting also .NET 8.0

! KGySoft.Drawing.Imaging namespace
===================================
! BitmapDataFactory class:
  ! The old CreateBitmapData overloads for custom pixel formats (the ones that have PixelFormatInfo parameter) no
    longer assume that the delegates can work independently with any back buffer. To assume this use the new
    overloads with Custom[Indexed]BitmapDataConfig parameters and set the BackBufferIndependentPixelAccess property.
  + New CreateBitmapData overloads with Custom[Indexed]BitmapDataConfig parameters for custom pixel format with
    delegates for also other color types than Color32. You can use these for wide custom pixel formats.