@@ -11,6 +11,11 @@
 
 * KGySoft.Drawing.Imaging namespace
 ===================================
++ BitmapDataExtensions class:
+  + New Clone overloads with ParallelConfig parameter.
+  + New CopyTo overloads with ParallelConfig parameter.
+  + New DrawInto overloads with ParallelConfig parameter.
+  + New Clear overload with ParallelConfig parameter.
 + BitmapDataFactory class:
   + New CreateBitmapData overloads.
 + ColorF struct:
